--- a/package.json
+++ b/package.json
@@ -24,11 +24,15 @@
     "@nestjs/common": "^9.0.0",
     "@nestjs/core": "^9.0.0",
     "@nestjs/jwt": "^9.0.0",
+    "@nestjs/mongoose": "^9.2.0",
     "@nestjs/passport": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
+    "@nestjs/swagger": "^6.1.2",
     "@nestjs/typeorm": "^9.0.1",
+    "class-validator": "^0.13.2",
     "dotenv": "^16.0.2",
     "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.6.1",
     "mysql": "^2.18.1",
     "mysql2": "^2.3.3",
     "passport": "^0.6.0",
