--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,48 +5,40 @@ jobs:
     name: Push Docker image to Docker Hub
     runs-on: ubuntu-latest
     steps:
-      -
-        name: Check out the repo
+      - name: Check out the repo
         uses: actions/checkout@v2
-      - 
-        name: Set up QEMU
+      - name: Set up QEMU
         uses: docker/setup-qemu-action@master
         with:
           platforms: all
-      - 
-        name: Set up Docker Buildx
+      - name: Set up Docker Buildx
         id: buildx
         uses: docker/setup-buildx-action@master
-      -
-        name: Available platforms
+      - name: Available platforms
         run: echo ${{ steps.buildx.outputs.platforms }}
-      -
-        name: Login to Docker Hub
-        uses: docker/login-action@v1 
+      - name: Login to Docker Hub
+        uses: docker/login-action@v1
         with:
           username: ${{ secrets.DOCKER_ID }}
-          password: ${{ secrets.DOCKER_TOKEN }}  
-      -
-        name: Extract branch name from git ref
+          password: ${{ secrets.DOCKER_TOKEN }}
+      - name: Extract branch name from git ref
         shell: bash
         run: echo "::set-output name=branch::${GITHUB_REF#refs/heads/}"
         id: extract_branch
-      -
-        name: Push to Docker Hub (in Pull Request)
+      - name: Push to Docker Hub (in Pull Request)
         if: ${{ github.event_name == 'pull_request' }}
         uses: docker/build-push-action@v2
         with:
           platforms: linux/amd64,linux/arm64
-          push: true 
+          push: true
           tags: truetype24/ingopassbackend:${{ github.head_ref }}
-      -
-        name: Push to Docker Hub (in Main Push)
+      - name: Push to Docker Hub (in Main Push)
         if: ${{ github.event_name == 'push' &&
           steps.extract_branch.outputs.branch == 'main' }}
         uses: docker/build-push-action@v2
         with:
           platforms: linux/amd64,linux/arm64
-          push: true 
+          push: true
           tags: truetype24/ingopassbackend:latest
 
   pull_from_registry:
@@ -55,16 +47,13 @@ jobs:
     needs: [push_to_registry]
     if: github.ref == 'refs/heads/main'
     steps:
-    -
-      name: Pull from Docker Hub and Run image
-      uses: appleboy/ssh-action@master
-      with:
-        host: ${{ secrets.SSH_HOSTNAME }}
-        username: ${{ secrets.SSH_USERNAME }}
-        password: ${{ secrets.SSH_PASSWORD }}
-        port: ${{ secrets.SSH_PORT }}
-        script: |
-          docker pull truetype24/ingopassbackend:latest
-          docker rm -f ingopass-backend
-          docker run --name ingopass-backend --env-file /etc/ingopass.env -p 3000:3000 -d truetype24/ingopassbackend
-          docker rmi $(docker images -f "dangling=true" -q)
+      - name: Pull from Docker Hub and Run image
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.SSH_HOSTNAME }}
+          username: ${{ secrets.SSH_USERNAME }}
+          password: ${{ secrets.SSH_PASSWORD }}
+          port: ${{ secrets.SSH_PORT }}
+          script: |
+            docker pull truetype24/ingopassbackend:latest
+            docker-compose -f ${{ secrets.COMPOSE_PATH }} up
