--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -55,5 +55,4 @@ jobs:
           password: ${{ secrets.SSH_PASSWORD }}
           port: ${{ secrets.SSH_PORT }}
           script: |
-            docker pull truetype24/ingopassbackend:latest
-            docker-compose -f ${{ secrets.COMPOSE_PATH }} up
+            docker-compose -f ${{ secrets.COMPOSE_PATH }} pull && docker-compose -f ${{ secrets.COMPOSE_PATH }} up -d
