--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,7 +29,7 @@ jobs:
         if: ${{ github.event_name == 'pull_request' }}
         uses: docker/build-push-action@v2
         with:
-          platforms: linux/amd64,linux/arm64
+          platforms: linux/amd64
           push: true
           tags: truetype24/ingopassbackend:${{ github.head_ref }}
       - name: Push to Docker Hub (in Main Push)
@@ -37,7 +37,7 @@ jobs:
           steps.extract_branch.outputs.branch == 'main' }}
         uses: docker/build-push-action@v2
         with:
-          platforms: linux/amd64,linux/arm64
+          platforms: linux/amd64
           push: true
           tags: truetype24/ingopassbackend:latest
 
