--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
     "school-kr": "^3.1.2",
+    "tmp": "^0.2.1",
     "typeorm": "^0.3.9"
   },
   "devDependencies": {
